--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-icons": "^4.3.1",
+    "react-router": "^6.3.0",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
     "react-scroll-parallax": "^3.0.6",
@@ -50,5 +51,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "react-typing-effect": "^2.0.5"
   }
 }
