--- a/package.json
+++ b/package.json
@@ -16,11 +16,14 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-icons": "^4.3.1",
+    "react-redux": "^8.0.1",
     "react-router": "^6.3.0",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
     "react-scroll-parallax": "^3.0.6",
     "react-slide-routes": "^2.0.0",
+    "redux": "^4.2.0",
+    "redux-thunk": "^2.4.1",
     "sass": "^1.49.10",
     "styled-components": "^5.3.5",
     "swiper": "^8.0.7",
