--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     }
   },
   "dependencies": {
+    "@apollo/client": "^3.6.9",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@fontsource/poppins": "^4.5.5",
@@ -15,10 +16,17 @@
     "@material-ui/lab": "^4.0.0-alpha.61",
     "@mui/icons-material": "^5.6.2",
     "@mui/material": "^5.6.2",
+    "@tanstack/react-query": "^4.0.10",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
+    "date-fns": "^2.29.1",
+    "formik": "^2.2.9",
+    "jwt-decode": "^3.1.2",
+    "loadash": "^1.0.0",
+    "lodash": "^4.17.21",
     "notistack": "^2.0.4",
     "particles-bg": "^2.5.5",
     "react": "^18.0.0",
@@ -38,7 +46,8 @@
     "swiper": "^8.0.7",
     "three": "^0.139.2",
     "vanta": "^0.5.22",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
