--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.1.3",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.6",
     "notistack": "^2.0.4",
     "particles-bg": "^2.5.5",
     "react": "^18.0.0",
@@ -31,6 +33,7 @@
     "react-scroll-parallax": "^3.0.6",
     "react-simple-snackbar": "^1.1.11",
     "react-slide-routes": "^2.0.0",
+    "react-test-renderer": "^18.2.0",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.1",
     "sass": "^1.49.10",
@@ -43,7 +46,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "react-scripts test --transformIgnorePatterns \"node_modules/(?!your-module-name)/\"",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
