--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-scroll-parallax": "^3.0.6",
     "react-simple-snackbar": "^1.1.11",
     "react-slide-routes": "^2.0.0",
+    "react-lottie-player": "^1.4.3",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.1",
     "sass": "^1.49.10",
