--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 REACT_APP_API_URL=https://motionbridge-generator.herokuapp.com
+REACT_APP_API_SUFFIX=/api
 FACTORY_API_URL=http://localhost:3001/
 REACT_APP_VERSION=$npm_package_version
 REACT_APP_NAME=$npm_package_name
