--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-icons": "^4.3.1",
+    "react-lottie-player": "^1.4.3",
     "react-redux": "^8.0.1",
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
@@ -39,8 +40,8 @@
     "react-scroll-parallax": "^3.0.6",
     "react-simple-snackbar": "^1.1.11",
     "react-slide-routes": "^2.0.0",
-    "react-lottie-player": "^1.4.3",
     "redux": "^4.2.0",
+    "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.1",
     "sass": "^1.49.10",
     "styled-components": "^5.3.5",
