--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@material-ui/lab": "^4.0.0-alpha.61",
     "@mui/icons-material": "^5.6.2",
     "@mui/material": "^5.6.2",
+    "@styled-icons/material": "^10.34.0",
     "@tanstack/react-query": "^4.0.10",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
@@ -45,6 +46,7 @@
     "redux-thunk": "^2.4.1",
     "sass": "^1.49.10",
     "styled-components": "^5.3.5",
+    "styled-icons": "^10.45.0",
     "swiper": "^8.0.7",
     "three": "^0.139.2",
     "vanta": "^0.5.22",
