--- a/package.json
+++ b/package.json
@@ -23,13 +23,19 @@
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
+    "bodymovin": "^4.13.0",
     "bootstrap": "^5.1.3",
     "date-fns": "^2.29.1",
     "formik": "^2.2.9",
+    "imgur": "^2.2.0",
+    "install": "^0.13.0",
     "jwt-decode": "^3.1.2",
     "loadash": "^1.0.0",
     "lodash": "^4.17.21",
+    "lottie-web": "^5.9.6",
     "notistack": "^2.0.4",
+    "npm": "^8.19.0",
+    "parse-image": "^0.3.0",
     "particles-bg": "^2.5.5",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
